# Project-Tick

./: .gitattributes  .gitignore  .gitmodules  .mise.toml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTING  CONTRIBUTING.md  COPYING.md  GNUmakefile  GOVERNANCE  GOVERNANCE.md  LICENSE  Makefile  README  README.md  REUSE.toml  SECURITY  TRADEMARK  alias.c  annotated.html  ar_io.c  ar_subs.c  arith_yacc.c  arith_yylex.c  bootstrap.cmd  bootstrap.sh  cd.c  cdefs.h  classtoml_1_1array.html  classtoml_1_1json__formatter.html  classtoml_1_1key.html  classtoml_1_1node.html  classtoml_1_1node__view.html  classtoml_1_1parse__error.html  classtoml_1_1parse__result.html  classtoml_1_1path.html  classtoml_1_1path__component.html  classtoml_1_1table.html  (+76 more)
LocalPeer/: CMakeLists.txt  README.md
LocalPeer/cmake/: LocalPeerConfig.cmake.in
archived/projt-launcher/: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .envrc  .gitattributes  .gitignore  .markdownlint.yaml  .markdownlintignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING.md  MAINTAINERS  README  flake.nix  packages.config
archived/projt-launcher/.clusterfuzzlite/: Dockerfile  build.sh
archived/projt-launcher/buildconfig/: BuildConfig.cpp.in  BuildConfig.h  Makefile
archived/projt-launcher/ci/: code-quality.nix  code-quality.sh  default.nix  nixpkgs-vet.nix  nixpkgs-vet.sh  parse.nix  pinned.json  supportedBranches.js  supportedSystems.json  supportedVersions.nix  update-pinned.sh
archived/projt-launcher/cmake/: CompilerWarnings.cmake  LauncherPackaging.cmake  MacOSXBundleInfo.plist.in  findOpenSSLbyNuget.cmake  useBZip2.cmake  useCMark.cmake  useLibpng.cmake  useLibqrencode.cmake  useMinimalLibs.cmake  useMinizip.cmake  usePTlibzippy.cmake  useQuazip.cmake  useTomlplusplus.cmake
archived/projt-launcher/docs/: APPLE_SILICON_RATIONALE.md  BUILD_SYSTEM.md  FUZZING.md  README.md
archived/projt-launcher/flatpak/: .editorconfig  .gitignore  README.md  org.projecttick.ProjTLauncher.yml  pubkey.asc
archived/projt-launcher/fuzz/: CMakeLists.txt  fuzz_gzip.cpp  fuzz_nbt_reader.cpp  fuzz_qjson_parse.cpp  fuzz_separator_prefix_tree.cpp
archived/projt-launcher/launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  ApplicationMessage.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  CefRuntime.cpp  CefRuntime.h  Commandline.cpp  Commandline.h  DataMigrationTask.cpp  DataMigrationTask.h  DefaultVariable.h  DesktopServices.cpp  DesktopServices.h  Exception.h  ExponentialSeries.h  FileSystem.cpp  FileSystem.h  Filter.h  GZip.cpp  GZip.h  HardwareInfo.cpp  InstanceCopyPrefs.cpp  InstanceCopyPrefs.h  InstanceCopyTask.cpp  InstanceCopyTask.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceDirUpdate.cpp  InstanceDirUpdate.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  (+55 more)
archived/projt-launcher/nix/: maintainers.nix  unwrapped.nix  wrapper.nix
archived/projt-launcher/program_info/: CMakeLists.txt  LICENSE.instanceicons  LICENSE.projecttick  genicons.sh  genmacicon.py  org.projecttick.ProjTLauncher.desktop.in  org.projecttick.ProjTLauncher.metainfo.xml.in  projtlauncher.6.scd.in  projtlauncher.icns  projtlauncher.manifest.in  projtlauncher.qrc.in  projtlauncher.rc.in  win_install.nsi.in
archived/projt-launcher/scripts/: build-cef-from-source.sh  build-tomlplusplus.mjs  gen-cmark-config.sh  gen-cmark-export.sh  gen-cmark-version.sh  gen-nbt-export.sh  gen-qrencode-config.sh  patch_maintainer_emails.py  syncconfig.sh  update-qt-version.sh  update-subtrees.sh
archived/projt-launcher/tests/: ApplicationMessage_test.cpp  BaseInstanceSettings_test.cpp  CMakeLists.txt  CatPack_test.cpp  Commandline_test.cpp  DataPackParse_test.cpp  DefaultVariable_test.cpp  ExponentialSeries_test.cpp  FileSystem_test.cpp  Filter_test.cpp  GZip_test.cpp  GradleSpecifier_test.cpp  INIFile_test.cpp  Index_test.cpp  InstanceCopyPrefs_test.cpp  JavaVersion_test.cpp  JsonHelpers_test.cpp  JsonTypes_test.cpp  Json_test.cpp  KonamiCode_test.cpp  LaunchLineRouter_test.cpp  LaunchLogModel_test.cpp  LaunchPipeline_test.cpp  LaunchVariableExpander_test.cpp  LogEventParser_test.cpp  MMCTime_test.cpp  MessageLevel_test.cpp  MetaComponentParse_test.cpp  ModPlatform_test.cpp  NetSink_test.cpp  (+21 more)
archived/ptlibzippy/: .gitignore  BUILD.bazel  CMakeLists.txt  COPYING.md  FAQ  INDEX  MODULE.bazel  Makefile.in  README  adler32.c  compress.c  configure  crc32.c  deflate.c  deflate.h  gzclose.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  ptlibzippy.3  ptlibzippy.h  ptlibzippy.map  ptlibzippy.pc.cmakein  ptlibzippy.pc.in  ptlibzippyConfig.cmake.in  ptlibzippy_pngshim.c  ptzippyconf.h.in  ptzippyguts.h  ptzippyutil.c  ptzippyutil.h  treebuild.xml  trees.c  (+2 more)
classparser/: CMakeLists.txt  README.md
classparser/cmake/: classparserConfig.cmake.in
ganalytics/: CMakeLists.txt
ganalytics/cmake/: ganalyticsConfig.cmake.in
ganalytics/include/: ganalytics.h
ganalytics/src/: ganalytics.cpp  ganalytics_worker.cpp  ganalytics_worker.h
iconfix/: CMakeLists.txt  README.md  xdgicon.h
iconfix/cmake/: iconfixConfig.cmake.in
iconfix/internal/: qiconloader.cpp
infra/foreman/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pytest.ini
infra/merge-action/: Dockerfile  README.md  action.yml  merge.py  pyproject.toml
javacheck/: CMakeLists.txt  README.md
javacheck/cmake/: JavaCheckConfig.cmake.in
javalauncher/: CMakeLists.txt  README.md
javalauncher/cmake/: NewLaunchConfig.cmake.in
katabasis/: CMakeLists.txt
katabasis/cmake/: KatabasisConfig.cmake.in
ofborg/tickborg/: Cargo.toml
optional-bare/: CMakeLists.txt
optional-bare/cmake/: optional-bareConfig.cmake.in
rainbow/: CMakeLists.txt  README.md
rainbow/cmake/: rainbowConfig.cmake.in
systeminfo/: CMakeLists.txt  README.md
systeminfo/cmake/: systeminfoConfig.cmake.in
xz-embedded/: CMakeLists.txt  README.md
xz-embedded/cmake/: xz-embeddedConfig.cmake.in
(+2850 files in other folders)
